Added city data

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <thead>
       <tr>
         <td><b>Location</b></td>
+        <td><b>City</b></td>
         <td><b>Date</b></td>
         <td><b>Tickets</b></td>
       </tr>
